--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fraisDetape"></activity>
+        <activity android:name=".synchroniser"></activity>
+        <activity android:name=".fraisDetape" />
         <activity android:name=".FraisDeNuite" />
         <activity android:name=".fraisDeRepas" />
         <activity android:name=".MainActivity">
