--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -32,5 +32,5 @@
         <activity android:name=".HfRecapActivity" />
         <activity android:name=".KmActivity" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
