--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.cned.emdsgil.suividevosfrais">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/my_backup_rules"
@@ -10,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".synchroniser"></activity>
+        <activity android:name=".historique"></activity>
+        <activity android:name=".synchroniser" />
         <activity android:name=".fraisDetape" />
         <activity android:name=".FraisDeNuite" />
         <activity android:name=".fraisDeRepas" />
@@ -32,5 +35,5 @@
         <activity android:name=".HfRecapActivity" />
         <activity android:name=".KmActivity" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
 </manifest>
